--- a/flashcards/study.html
+++ b/flashcards/study.html
@@ -75,7 +75,9 @@
         </main>
     </div>
 
-    <script src="js/storage.js"></script>
+    <!-- Load in correct order -->
+    <script src="js/supabase-client.js"></script>
+    <script src="js/storage-supabase.js"></script>
     <script src="js/markdown.js"></script>
     <script src="js/card.js"></script>
 </body>
