--- a/flashcards/study.html
+++ b/flashcards/study.html
@@ -6,6 +6,7 @@
     <title>Study Mode - Flashcard Manager</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/editor.css">
+    <link rel="stylesheet" href="css/markdown-card-fix.css">
 </head>
 <body>
     <div class="container study-container">
