Add markdown card fix CSS link for consistent markdown rendering

--- a/flashcards/create.html
+++ b/flashcards/create.html
@@ -6,6 +6,7 @@
     <title>Create/Edit Cards - Flashcard Manager</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/editor.css">
+    <link rel="stylesheet" href="css/markdown-card-fix.css">
 </head>
 <body>
     <div class="container">
