--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard Manager - Dashboard</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/markdown-card-fix.css">
     <style>
         .header-right {
             position: absolute;
